Openapi.yaml (#47)
* Update openapi.yaml

Fix defects in openapi.yaml

* updates for ping

updates for ping

* Update .travis.yml

remove code coverage for now
